--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,5 @@ ENV = 'development'
 
 # base api
 #VUE_APP_BASE_API = ''
-VUE_APP_BASE_API = 'http://localhost:8888'
+VUE_APP_BASE_API = ''
 #VUE_APP_BASE_API = 'http://39.107.237.177'
