--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,6 @@
 ENV = 'development'
 
 # base api
-#VUE_APP_BASE_API = ''
+VUE_APP_BASE_API = ''
 #VUE_APP_BASE_API = 'http://123.56.236.23:8888'
-#VUE_APP_BASE_API = 'http://39.107.237.177'
-VUE_APP_BASE_API = 'http://localhost:8888'
+#VUE_APP_BASE_API = 'http://localhost:8888'
