--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
